tick marks and dots are changed to another icons

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/nice-select.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <!--     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
  -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
@@ -230,12 +232,12 @@
                                 days for vendor assessment but we can get it done just in few days only. Truest us
                                 because we can get it all done for you.
                             <ul class="custom-font">
-                                <li><i class="fas fa-check orangeiconcolor"></i> Registration</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Brand Approval</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Profile Completion</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Products Upload</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Services Upload</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Bidding On Tenders</li>
+                                <li><i class="fas fa-user-plus orangeiconcolor"></i> Registration</li>
+                                <li><i class="far fa-thumbs-up orangeiconcolor"></i> Brand Approval</li>
+                                <li><i class="far fa-check-circle orangeiconcolor"></i> Profile Completion</li>
+                                <li><i class="fas fa-upload orangeiconcolor"></i> Products Upload</li>
+                                <li><i class="fas fa-upload orangeiconcolor"></i> Services Upload</li>
+                                <li><i class="far fa-handshake orangeiconcolor"></i> Bidding On Tenders</li>
                             </ul>
 
                             </p>
@@ -844,10 +846,10 @@
                             <p>
                                 The simplest and best way to provide you the best consultancy for Trinity Balaji portal.
                             <ul class="custom-font">
-                                <li><i class="fas fa-check orangeiconcolor"></i> Choose & Buy Your Package</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Make Payment & Fill Required Details
+                                <li><i class="fas fa-shopping-cart orangeiconcolor"></i> Choose & Buy Your Package</li>
+                                <li><i class="far fa-money-bill-alt orangeiconcolor"></i> Make Payment & Fill Required Details
                                 </li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Wait For Confirmation & All done !</li>
+                                <li><i class="fas fa-spinner orangeiconcolor"></i> Wait For Confirmation & All done !</li>
                             </ul>
                             </p>
                         </div>
@@ -947,11 +949,11 @@
             </div>
         </section>
 
-        <section class="pt-3 about-low-area section-padding40">
+        <section class="pt-3">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-xl-6 col-lg-6 col-md-10">
-                        <div class="about-caption mb-50">
+                        <div class="about-caption">
                             <!-- Section Tittle -->
                             <div class="section-title mb-35">
 
@@ -960,15 +962,14 @@
                             </div>
                             <p>
                             <ul class="custom-font">
-                                <li><i class="fas fa-check orangeiconcolor"></i> High ROI</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Easy Registration</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Less Work For Profit</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Get Orders Regularly</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Large Orders For Startups</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Direct Government Purchase</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Large Number Of Products & Services
+                                <li><i class="fas fa-money-check-alt orangeiconcolor"></i> High ROI</li>
+                                <li><i class="fas fa-user-plus orangeiconcolor"></i> Easy Registration</li>
+                                <li><i class="fas fa-hand-holding-usd orangeiconcolor"></i> Less Work For Profit</li>
+                                <li><i class="fas fa-shopping-cart orangeiconcolor"></i> Get Orders Regularly</li>
+                                <li><i class="fas fa-infinity orangeiconcolor"></i> Large Orders For Startups</li>
+                                <li><i class="far fa-money-bill-alt orangeiconcolor"></i> Direct Government Purchase</li>
+                                <li><i class="fas fa-shipping-fast orangeiconcolor"></i> Large Number Of Products & Services
                                 </li>
-
                             </ul>
 
                             </p>
@@ -1049,28 +1050,28 @@
                     <div class="col-xl-12 col-lg-12 col-md-10">
                         <div class="display-7">
                             <ul>
-                                <li> • One stop shop for marketing with minimal efforts. All the products and services
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> One stop shop for marketing with minimal efforts. All the products and services
                                     are getting offered in one place which is beneficial for the sellers and buyers.
                                 </li>
-                                <li> • One stop shop for bids / reverse auction on products / services. The seller and
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> One stop shop for bids / reverse auction on products / services. The seller and
                                     the buyer both
                                 </li>
-                                <li> • New Product Suggestion facility available to Sellers. The bidding auction gets
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> New Product Suggestion facility available to Sellers. The bidding auction gets
                                     displayed in the site and the interested sellers put up their products and services
                                     under the auction form.
                                 </li>
-                                <li> • Seller friendly dashboard for selling and monitoring of supplies and payments.
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> Seller friendly dashboard for selling and monitoring of supplies and payments.
                                     The seller do not have to continously monitor its progress for selling the items.
                                     The Dashboard has all the information related to it.</li>
-                                <li> • Consistent and uniform purchase procedures. There will no deviation in the
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> Consistent and uniform purchase procedures. There will no deviation in the
                                     procedures for procuring the goods and services.</li>
-                                <li> • Easy Return policy. The buyer, if does not like the products can easily replace
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> Easy Return policy. The buyer, if does not like the products can easily replace
                                     it with another one.</li>
-                                <li> • Buying Goods and Services online, as and when required. The buyer and the seller
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> Buying Goods and Services online, as and when required. The buyer and the seller
                                     both have the option to buy sell as and when required.</li>
-                                <li> • Transparent and ease of buying. No fraudisim would be detected as to who receives
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> Transparent and ease of buying. No fraudisim would be detected as to who receives
                                     the contract due to transparency of the process.</li>
-                                <li> • User-friendly dash board for Buying and monitoring supplies and payments</li>
+                                <li> <i class="far fa-check-circle blueiconcolor"></i> User-friendly dash board for Buying and monitoring supplies and payments</li>
                             </ul>
                         </div>
 
@@ -1241,26 +1242,26 @@
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-lg-12 col-md-10">
                         <ul>
-                            <li> • Fully online, paperless and contactless platform. There is no need now sign or fill
+                            <li><i class="far fa-check-circle"></i> Fully online, paperless and contactless platform. There is no need now sign or fill
                                 up any physical forms, which was very tedious due to submission of many documents.</li>
-                            <li> • Seller friendly dashboard for monitoring supplies & payments.
+                            <li> <i class="far fa-check-circle"></i> Seller friendly dashboard for monitoring supplies & payments.
                             </li>
-                            <li> • User friendly appication has been launched so as to facilitate the buyers as well as
+                            <li> <i class="far fa-check-circle"></i> User friendly appication has been launched so as to facilitate the buyers as well as
                                 the sellers. The portal itself has been revamped for easy understanding and guidance for
                                 the sellers have been updated time and again for their future references.
                             </li>
-                            <li> • There is a simple way to gain access for the bids and after the result of the bid
+                            <li> <i class="far fa-check-circle"></i> There is a simple way to gain access for the bids and after the result of the bid
                                 requirement, it becomes way simpler for the buyers and the sellers for co-ordinating
                                 with each other. </li>
-                            <li> • If there are any grievances faced by anyone there is a quick redressal mechanism
+                            <li> <i class="far fa-check-circle"></i> If there are any grievances faced by anyone there is a quick redressal mechanism
                                 which provides quick and easy resolution to follow.as fa-play fa-xs"></i> Direct and
                                 easy access to all government
                                 departments</li>
-                            <li> • If any deadlines have not been met, there will be quick intimations send and no more
+                            <li> <i class="far fa-check-circle"></i> If any deadlines have not been met, there will be quick intimations send and no more
                                 tension of any missed services.</li>
-                            <li> • The portal is user friendly, anyone can bid for their services and products without
+                            <li> <i class="far fa-check-circle"></i> The portal is user friendly, anyone can bid for their services and products without
                                 any middlemen or agent.</li>
-                            <li> • Appropriate payment system is been handled in a very corrective way so that the
+                            <li> <i class="far fa-check-circle"></i> Appropriate payment system is been handled in a very corrective way so that the
                                 seller has no problem in following up things.</li>
                         </ul>
                     </div>
@@ -1574,12 +1575,12 @@
                                 somewhere else to
                                 get it all done for you.
                             <ul class="custom-font">
-                                <li><i class="fas fa-check orangeiconcolor"></i> Registration</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Brand Approval</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Profile Completion</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Products Upload</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Services Upload</li>
-                                <li><i class="fas fa-check orangeiconcolor"></i> Bidding On Tenders</li>
+                                <li><i class="fas fa-user-plus orangeiconcolor"></i> Registration</li>
+                                <li><i class="far fa-thumbs-up orangeiconcolor"></i> Brand Approval</li>
+                                <li><i class="far fa-check-circle orangeiconcolor"></i> Profile Completion</li>
+                                <li><i class="fas fa-upload orangeiconcolor"></i> Products Upload</li>
+                                <li><i class="fas fa-upload orangeiconcolor"></i> Services Upload</li>
+                                <li><i class="far fa-handshake orangeiconcolor"></i> Bidding On Tenders</li>
                             </ul>
 
                             </p>
