--- a/our-packages.html
+++ b/our-packages.html
@@ -156,7 +156,7 @@
                         <div class="card border-0">
                             <div class="card-body">
                                 <h2 class="card-title font-15">
-                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star chocolate-color"></i>
                                     ACTIVATION OF YOUR OEM PANEL
                                 </h2>
                                 <p class="card-text font-14">We will activate your OEM panel.</p>
@@ -165,7 +165,7 @@
                         <div class="card border-0">
                             <div class="card-body">
                                 <h2 class="card-title font-15">
-                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star chocolate-color"></i>
                                     SELL WITH YOUR BRAND NAME
                                 </h2>
                                 <p class="card-text font-14">we will upload your 1 product with your brand name.</p>
@@ -174,7 +174,7 @@
                         <div class="card border-0">
                             <div class="card-body">
                                 <h2 class="card-title font-15">
-                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star chocolate-color"></i>
                                     BRAND APPROVAL
                                 </h2>
                                 <p class="card-text font-14">We will approve your brand name on Trinity Balaji</p>
@@ -183,7 +183,7 @@
                         <div class="card border-0">
                             <div class="card-body">
                                 <h2 class="card-title font-15">
-                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star chocolate-color"></i>
                                     WEBSITE IS REQUIRED
                                 </h2>
                                 <p class="card-text font-14">If you don't have a website we can provide you one for brand
@@ -240,12 +240,12 @@
                     <div class="col-xl-12 col-lg-12 col-md-10">
                         <div class="custom-indent">
                             <ul>
-                                <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> All the payments will be made in advance.</li>
-                                <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> We do not claim the time of work completion it may vary.</li>
-                                <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> It May Take Upto 2 Hours For Payment Confirmation So Please Keep Patience After Paying For Packages.</li>
-                                <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> Customers have to pay all the government fee like Vendor assessment, etc. Customers have to provide all docs like Trademark, etc. Obtaining fee for these documents will be paid by customers if required. ​</li>
-                                <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> Please always share screenshot of payment id with us after making the payment.</li>
-                                <li><i class="fas fa-check bluetextcolor custom-indent-li"></i> We change our policies and terms time to time.</li>
+                                <li><i class="fas fa-thumbtack bluetextcolor custom-indent-li"></i> All the payments will be made in advance.</li>
+                                <li><i class="fas fa-thumbtack bluetextcolor custom-indent-li"></i> We do not claim the time of work completion it may vary.</li>
+                                <li><i class="fas fa-thumbtack bluetextcolor custom-indent-li"></i> It May Take Upto 2 Hours For Payment Confirmation So Please Keep Patience After Paying For Packages.</li>
+                                <li><i class="fas fa-thumbtack bluetextcolor custom-indent-li"></i> Customers have to pay all the government fee like Vendor assessment, etc. Customers have to provide all docs like Trademark, etc. Obtaining fee for these documents will be paid by customers if required. ​</li>
+                                <li><i class="fas fa-thumbtack bluetextcolor custom-indent-li"></i> Please always share screenshot of payment id with us after making the payment.</li>
+                                <li><i class="fas fa-thumbtack bluetextcolor custom-indent-li"></i> We change our policies and terms time to time.</li>
                                </ul>
                         </div>
 
