--- a/our-services.html
+++ b/our-services.html
@@ -90,7 +90,7 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> Trinity Balaji Portal Registration
+                            <i class="fas fa-user-plus orangeiconcolor"></i> Trinity Balaji Portal Registration
                         </h2>
                         <p class="card-text">Get registered on Trinity Balaji with our Trinity Balaji registration services.
                         </p>
@@ -102,7 +102,7 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> Upload Products Or Services
+                            <i class="fas fa-upload orangeiconcolor"></i> Upload Products Or Services
                         </h2>
                         <p class="card-text">Get registered on Trinity Balaji with our Trinity Balaji registration services.
                         </p>
@@ -113,7 +113,7 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> Bidding On Trinity Balaji Portal
+                            <i class="far fa-handshake orangeiconcolor"></i> Bidding On Trinity Balaji Portal
                         </h2>
                         <p class="card-text text-rght">Bid on the e tenders you want to on the Trinity Balaji portal</p>
                     </div>
@@ -126,7 +126,7 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> Vendor Assessment Guidance
+                            <i class="fas fa-book-reader orangeiconcolor"></i> Vendor Assessment Guidance
                         </h2>
                         <p class="card-text">We will guide you through all the requirements and process of Vendor
                             Assessment on Trinity Balaji portal.</p>
@@ -138,7 +138,7 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> GST Registration
+                            <i class="fas fa-user-plus orangeiconcolor"></i> GST Registration
                         </h2>
                         <p class="card-text">Register your company or business with the GST registration certificate.
                         </p>
@@ -149,7 +149,7 @@
                 <div class="card border-0 text-center">
                     <div class="card-body">
                         <h2 class="card-title">
-                            <i class="fas fa-check orangeiconcolor"></i> MSME Registration
+                            <i class="fas fa-user-plus orangeiconcolor"></i> MSME Registration
                         </h2>
                         <p class="card-text text-rght">Get registered with MSME. </p>
                     </div>
