minor changes made

--- a/header.html
+++ b/header.html
@@ -55,9 +55,9 @@
           <li class="nav-item px-4">
             <a class="nav-link" href="trinity-training.html">Trinity Training</a>
           </li>
-          <li class="nav-item px-4">
+         <!--  <li class="nav-item px-4">
             <a class="nav-link" href="our-clients.html">Our Clients</a>
-          </li>
+          </li> -->
           <li class="nav-item px-4">
             <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
