--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             </div>
         </section>
 
-
+<section>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -471,6 +471,7 @@
                 </div>
             </div>
         </div>
+    </section>
 
         <section class="about-low-area section-padding40">
             <div class="container">
